--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,3 +43,29 @@
   padding-left:150px;
   padding-right:150px;
 }
+
+.user-profile-header {
+  display:flex;
+  margin-bottom:2rem;
+}
+
+.user-profile-header h1 {
+  flex:8;
+  margin-bottom:0
+}
+
+.user-profile-header button {
+  flex:1
+}
+
+.textField {
+  display: flex;
+}
+
+.fieldLabel {
+  flex:1
+}
+
+.fieldValue {
+  flex:5
+}
