--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@ dummydeclaration {
   padding-left: 4em;
 } /* Firefox ignores first declaration for some reason */
 
-tab { 
+tab {
   padding-left: 4em;
 }
 
@@ -27,7 +27,7 @@ tab {
   margin-block-end:0px;
   height:75px;
 }
-  
+
 .navbar-tab {
   display:inline;
   float:left;
@@ -72,6 +72,10 @@ tab {
 .fade.exit.active {
   opacity: 0.01;
   transition: opacity 1000ms ease-in;
+}
+
+.card {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .story-reader {
