--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,51 @@
 /* Global Styles */
 
+/*
+
+COLOR SCHEME
+
+ACCENT|Cyan - #84dcc6
+HOVERACCENT|DarkCyan - #165041
+
+PAPER|White/Blue - #E0F2E9
+HOVERPAPER|Blue/White - #C7DFE4
+
+NAVBAR|DeepBlue - #1B263B
+HOVERNAVBAR|DarkBlue - #0D1B2A
+
+BACKGROUND|DullBlue - #444E60
+
+LIGHTTEXT|White/Blue - #E0F2E9
+
+*/
+
+/* Firefox ignores first declaration for some reason */
 dummydeclaration {
   padding-left: 4em;
-} /* Firefox ignores first declaration for some reason */
+} 
+
+html {
+  background-color: #444E60;
+}
 
 tab {
   padding-left: 4em;
 }
 
 .navbar {
-  background-color:#ddd;
+  background-color:#1B263B;
   top:0;
   position:fixed;
   width:100%;
   height:75px;
+}
+
+.navbar-seperator {
+  top:75px;
+  position:fixed;
+  width:100%;
+  float: left;
+  margin: auto;
 }
 
 .navbar-logo img {
@@ -34,7 +66,7 @@ tab {
 }
 
 .navbar-tab-hover {
-  background-color:#bbb
+  background-color:#0D1B2A
 }
 
 .navbar-tab a {
@@ -45,7 +77,7 @@ tab {
 .navbar-tab p {
   margin-bottom:0;
   line-height:25px;
-  color:#111
+  color:#E0F2E9
 }
 
 .navbar-tab a:hover {
@@ -54,6 +86,7 @@ tab {
 
 .main-body {
   margin-top:85px;
+  background-color: #444E60;
 }
 
 .fade-enter {
@@ -74,15 +107,97 @@ tab {
   transition: opacity 1000ms ease-in;
 }
 
-.card {
+.section-seperator {
+  height: .1em;
+  margin: 0px;
+  background-color: #E0F2E9;
+}
+
+.shadow-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.shadowHover-1 {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.shadowHover-1:hover {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  background-color: #C7DFE4;
+}
+
+.shadow-2 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.shadowHover-2 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.shadowHover-2:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  background-color: #C7DFE4;
+}
+
+.shadow-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.shadowHover-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.shadowHover-3:hover {
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  background-color: #C7DFE4;
+}
+
+.FloatingActionButton-fab-1 {
+  z-index: 99;
+}
+
+.btn-primary {
+  background-color: #84dcc6;
+  border-color: #343a40;
+  color: #343a40;
+}
+
+.btn-primary:hover {
+  background-color: #165041;
+  border-color: #343a40;
+  color: #E0F2E9;
+}
+
+.btn-outline-primary {
+  border-color: #84dcc6;
+  color: #343a40;
+}
+
+.btn-outline-primary:hover {
+  background-color: #84dcc6;
+  border-color: #343a40;
+  color: #343a40;
+}
+
+@media(min-width: 1024px) {
+   .app-fab--absolute {
+    bottom: 5rem;
+    right: 10rem;
+    z-index: 99;
+  }
+}
+
+.card {
+  background-color:#E0F2E9
 }
 
 .story-reader {
   max-width: 95%;
   margin: auto;
   height: 100%;
-  background: white;
   font-size: 110%;
 }
 
