css updates, search bar mockup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,18 +4,18 @@
 
 COLOR SCHEME
 
-ACCENT|Cyan - #84dcc6
-HOVERACCENT|DarkCyan - #165041
+ACCENT|Cyan - var(--accentColor)
+HOVERACCENT|DarkCyan - var(--accentColorHover)
 
-PAPER|White/Blue - #E0F2E9
-HOVERPAPER|Blue/White - #C7DFE4
+PAPER|White/Blue - var(--paperColor)
+HOVERPAPER|Blue/White - var(--paperColorHover)
 
-NAVBAR|DeepBlue - #1B263B
-HOVERNAVBAR|DarkBlue - #0D1B2A
+NAVBAR|DeepBlue - var(--navBarColor)
+HOVERNAVBAR|DarkBlue - var(--navBarColorHover)
 
-BACKGROUND|DullBlue - #444E60
+BACKGROUND|DullBlue - var(--backgroundColor)
 
-LIGHTTEXT|White/Blue - #E0F2E9
+LIGHTTEXT|White/Blue - var(--paperColor)
 
 */
 
@@ -24,8 +24,23 @@ dummydeclaration {
   padding-left: 4em;
 } 
 
+:root {
+  --accentColor: #84dcc6;
+  --accentColorHover: #165041;
+  
+  --paperColor: #E0F2E9;
+  --paperColorHover: #C7DFE4;
+
+  --navBarColor: #1B263B;
+  --navBarColorHover: #0D1B2A;
+
+  --backgroundColor: #444E60;
+
+  --textColorLight: #E0F2E9;
+}
+
 html {
-  background-color: #444E60;
+  background-color: var(--backgroundColor);
 }
 
 tab {
@@ -33,7 +48,7 @@ tab {
 }
 
 .navbar {
-  background-color:#1B263B;
+  background-color:var(--navBarColor);
   top:0;
   position:fixed;
   width:100%;
@@ -66,7 +81,7 @@ tab {
 }
 
 .navbar-tab-hover {
-  background-color:#0D1B2A
+  background-color:var(--navBarColorHover)
 }
 
 .navbar-tab a {
@@ -77,7 +92,7 @@ tab {
 .navbar-tab p {
   margin-bottom:0;
   line-height:25px;
-  color:#E0F2E9
+  color:var(--paperColor)
 }
 
 .navbar-tab a:hover {
@@ -86,7 +101,7 @@ tab {
 
 .main-body {
   margin-top:85px;
-  background-color: #444E60;
+  background-color: var(--backgroundColor);
 }
 
 .fade-enter {
@@ -110,7 +125,7 @@ tab {
 .section-seperator {
   height: .1em;
   margin: 0px;
-  background-color: #E0F2E9;
+  background-color: var(--paperColor);
 }
 
 .shadow-1 {
@@ -124,7 +139,7 @@ tab {
 
 .shadowHover-1:hover {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  background-color: #C7DFE4;
+  background-color: var(--paperColorHover);
 }
 
 .shadow-2 {
@@ -138,7 +153,7 @@ tab {
 
 .shadowHover-2:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  background-color: #C7DFE4;
+  background-color: var(--paperColorHover);
 }
 
 .shadow-3 {
@@ -152,7 +167,7 @@ tab {
 
 .shadowHover-3:hover {
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-  background-color: #C7DFE4;
+  background-color: var(--paperColorHover);
 }
 
 .FloatingActionButton-fab-1 {
@@ -160,26 +175,45 @@ tab {
 }
 
 .btn-primary {
-  background-color: #84dcc6;
-  border-color: #343a40;
+  background-color: var(--accentColor);
+  border-color: var(--accentColor);
   color: #343a40;
 }
 
 .btn-primary:hover {
-  background-color: #165041;
-  border-color: #343a40;
-  color: #E0F2E9;
+  background-color: var(--accentColorHover);
+  border-color: var(--accentColorHover);
+  color: var(--paperColor);
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle, .btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show>.btn-primary.dropdown-toggle:focus {
+  background-color: var(--accentColorHover);
+  border-color: var(--accentColorHover);
+  color: var(--paperColor);
+  box-shadow: 0 0 0 0.2rem var(--accentColorHover);
 }
 
 .btn-outline-primary {
-  border-color: #84dcc6;
+  border-color: var(--accentColor);
   color: #343a40;
 }
 
 .btn-outline-primary:hover {
-  background-color: #84dcc6;
+  background-color: var(--accentColor);
   border-color: #343a40;
   color: #343a40;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show>.btn-outline-primary.dropdown-toggle .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .show>.btn-outline-primary.dropdown-toggle:focus {
+  background-color: var(--accentColor);
+  border-color: #343a40;
+  color: #343a40;
+  box-shadow: 0 1px 1px var(--accentColorHover) inset, 0 0 8px var(--accentColorHover);
+}
+
+.btn-primary:focus, .btn-outline-primary:focus, textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus, .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .show>.btn-outline-dark.dropdown-toggle:focus, .btn-outline-dark.focus, .btn-outline-dark:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus, .btn-secondary:not(:disabled):not(.disabled):active:focus, .show>.btn-secondary.dropdown-toggle:focus, .btn-secondary.focus, .btn-secondary:focus {   
+    border-color: var(--accentColorHover);
+    box-shadow: 0 1px 1px var(--accentColorHover) inset, 0 0 8px var(--accentColorHover);
 }
 
 @media(min-width: 1024px) {
@@ -191,7 +225,7 @@ tab {
 }
 
 .card {
-  background-color:#E0F2E9
+  background-color:var(--paperColor)
 }
 
 .story-reader {
