User Profile store and login functioning properly

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,10 +41,15 @@ dummydeclaration {
 
 html {
   background-color: var(--backgroundColor);
+  font-size: 14px;
 }
 
 tab {
   padding-left: 4em;
+}
+
+p {
+  font-size: 1rem;
 }
 
 .navbar {
